// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-box--focusable rcx-css-1szqnba rcx-css-k3fjzq"
      role="button"
      tabindex="0"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1n09zs3"
      >
        Announcement
      </div>
    </div>
  </div>
</body>
`;

exports[`renders WithLink without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-box--focusable rcx-css-1szqnba rcx-css-k3fjzq"
      role="button"
      tabindex="0"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1n09zs3"
      >
        <a
          href="https://rocket.chat"
          target="_blank"
        >
          Announcement
        </a>
      </div>
    </div>
  </div>
</body>
`;
